# pimpl-template

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/pimpl-template/: CMakeLists.txt  pimpl_template.h
src/testlib/: CMakeLists.txt  container.cpp  container.h  container_p.h  object.cpp  object.h  object_p.h  testlib_global.h  testlib_global_p.h
src/testmain/: CMakeLists.txt  main.cpp
